--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies 👨‍🔧
-        run: npm install
+        run: npm ci
 
       - name: Build project 📦
         run: npm run build # This script should create a `dist` directory. The base path is configured in vite.config.ts
